Added new button

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,6 +154,7 @@ a.botonGetStarted {
     margin-top: 20px;
     color: #fff;
     padding: 8px 20px;
+    margin-right: 2em;
     background-color: #FF007F;
     border-radius: 35px;
     border: 2px solid #FF007F;
